2001-04-17  Michael Meeks  <michael@ximian.com>

	* gconf/Makefile.am (dist-hook): don't distribute built
	sources.

Wed Apr 11 08:07:11 2001  George Lebl <jirka@5z.com>

	* gconf/gconf.c (gconf_engine_unref): If unreffing the default engine
	  set the default_engine pointer to NULL

2001-04-02  Federico Mena Quintero  <federico@ximian.com>

	* acinclude.m4: "sourceforge.net", not "sourceforce.net".

2001-03-24  Anders Carlsson   <andersca@gnu.org>

	* configure.in (REBUILD): Add gconf-2.0.pc to AC_OUTPUT files.

2001-03-23  Marius Andreiana  <mandreiana@yahoo.com>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS

2001-03-18  Martin Baulig  <baulig@suse.de>

	* gconf/gthreadpool.[ch]: Removed.
	* gconf/gconf-glib-private.h: Removed.
	* gconf/gconf-glib-public.h: Removed.

	* gconf/gconf-client.[ch]: Moved here from wrappers/gtk/
	and migrated to use GObject.

	* gconf/testgconfclient.c: Moved here from wrappers/gtk/.

	* gconf/gconf-internals.h
	(gconf_CORBA_Object_hash, gconf_CORBA_Object_equal):
	New static inline functions.

	* gconf/gconfmarshal.list: New file.

	* gconf/gconftool.c: Use libxml 2.

	* backends/xml-backend.c, backends/xml-cache.h,
	backends/xml-dir.c, backends/xml-dir.h,
	backends/xml-entry.c, backends/xml-entry.h: Use libxml 2.

	* wrappers/gtk/*: Moved to gconf/.

2001-03-18  Martin Baulig  <baulig@suse.de>

	We're now on the GNOME 2.0 platform.

	* configure.in: Set MAJOR_VERSION to 2, use pkg-config to
	check for stuff; GTK+ is now optional and only used for
	the examples; depend on ORBit2.

	* acinclude.m4: Add the contents of
	gnome-common/macros2/gnome-pkgconfig.m4 here.

	* Makefile.am: Install gconf-2.0.pc.

	* gconf-2.0.pc.in: New file.

2001-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-entry.c: Merge from branch. Use xmlFree().
	* gconf/gconftool.c: Merge from branch. Use xmlFree() and
	don't free until after referencing stuff.
	
2001-03-12  Timur Bakeyev  <timur@gnu.org>
