@@ -1,3 +1,11 @@
+2001-04-28  Murray Cumming  <murrayc@usa.net>
+
+	* gconf/gconf-client.c, gconf/gconf-client.h,
+          gconf/gconf-schema.c, gconf/gconf-schema.h,
+          gconf/gconf-value.c, gconf/gconf-value.h,
+          gconf/gconf.c, gconf/gconf.h: Use of const with function
+          args. e.g. gconf_value_copy(const GConfValue* src).
+
 2001-04-17  Michael Meeks  <michael@ximian.com>
 
 	* gconf/Makefile.am (dist-hook): don't distribute built
